<resources>
    <string-array name="group_name">








    </string-array>
    <string name="candlelight">CandleLight</string>
    <string name="company">senink</string>
    <string name="app_name">ILife</string>
    <string name="username_hint">mobile/email/username</string>
    <string name="password_hint">Password</string>
    <string name="ble_key_hint">Ble Key</string>
    <string name="save_password">Save</string>
    <string name="local_login_ckbox">Local</string>
    <string name="btn_login">Login</string>
    <string name="btn_rigester">New Account</string>
    <string name="btn_forget_password">Forgot?</string>
    <string name="btn_add_new_device">Add a new device</string>
    <string name="title_rigester">Rigester</string>
    <string name="rigester_account_hint">Telephone number</string>
    <string name="rigester_password_hint">Password</string>
    <string name="rigester_account_twice_hint">Password comfirm</string>
    <string name="rigester_email_hint">Please enter your Email</string>
    <string name="rigester_btn_confirm">Rigester</string>
    <string name="title_get_back_pwd">Forgot Password</string>
    <string name="get_back_pwd_email">Please enter the registered email or the telephone number</string>
    <string name="get_back_pwd_btn_confirm">Confirm</string>
    <string name="title_device">My Device</string>
    <string name="empty_device_title">You have not added devices.</string>
    <string name="empty_device_info">Please scan the QR code on the product packaging can add new equipment the.</string>
    <string name="btn_add_device">Click the Add Device Scan</string>
    <string name="menu_add_new_device">New equipment</string>
    <string name="menu_order_by_position">Sort by location</string>
    <string name="menu_order_by_name">Sort by type</string>
    <string name="menu_order_by_device">Sort by device</string>
    <string name="registed_device_name">device name</string>
    <string name="registed_device_power">Power</string>
    <string name="registed_device_power_unit">Watt</string>
    <string name="registed_device_detail_connected_speed_title">Link speed</string>
    <string name="registed_device_detail_connected_speed_unit">kb/s</string>
    <string name="registed_device_detail_number_title">Access device</string>
    <string name="registed_device_detail_number_unit">pcs</string>
    <string name="total_data_unit">M</string>
    <string name="registed_device_detail_show_black_white_list">Expand the list to see black and white list</string>
    <string name="add_to_black_list">Add to black list</string>
    <string name="visit_internet">Visit internet</string>
    <string name="connected_time">Connected time</string>
    <string name="previous_total_data">Previous total data</string>
    <string name="download_speed">Download speed</string>
    <string name="settings_title">Settings</string>
    <string name="quick_setting_guide">Quick setting guide</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="select_working_mode_title">Selecte working mode</string>
    <string name="please_select_working_mode">Please selecte the rounter working mode</string>
    <string name="exited_ppoe_account">Exited ppoe account</string>
    <string name="exited_ppoe_account_summary">I have PPOE account , I want to dial-up</string>
    <string name="access_wired_network">Access exited wired network</string>
    <string name="access_wired_network_summary">I already have a wired network, plug the Internet cable will be able to access</string>
    <string name="access_wirless_network">Access exited wirless network</string>
    <string name="access_wirless_network_summary">I already have a wireless network, if the link can access</string>
    <string name="internet_account_settings">Internet account settings</string>
    <string name="enter_internet_account_info">Please enter your internet account and password</string>
    <string name="hint_internet_account">Please enter your internet account</string>
    <string name="shao_qing_accu">Please input invited account</string>
    <string name="send_yao_qing">Send invitations</string>
    <string name="hint_wired_account">Please enter your SSID</string>
    <string name="select_wirless">Select a wirless</string>
    <string name="tab_setting_title">Settings</string>
    <string name="se_bei_manage">Device Management</string>
    <string name="one_zhi_neng">One key smart</string>
    <string name="parent_accu">Author Management</string>
    <string name="about">About</string>
    <string name="exit">Quit</string>
    <string name="user_info_title">User info</string>
    <string name="se_bei_list_title">Device List</string>
    <string name="device_info_title">Device info</string>
    <string name="add_new_accu_title">New Account</string>
    <string name="smart_device_manager">Smart device manager</string>
    <string name="smart_device_list">Smart device list</string>
    <string name="add_new_device">Add new device</string>
    <string name="add_new_group">Add new group</string>
    <string name="add_exited_device">Add exited device</string>
    <string name="smart_title">Smart</string>
    <string name="plug_states">Plug states</string>
    <string name="living_room">Living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="master_bedroom">Master Bedroom</string>
    <string name="guest_room_001">Guest room 1</string>
    <string name="guest_room_002">Guest room 2</string>
    <string name="dining_hall">Dining hall</string>
    <string name="toy_room">Toy Room</string>
    <string name="lavatory">lavatory</string>
    <string name="device_name_hint">Please enter a device name</string>
    <string name="parents_control_title">Parents control</string>
    <string name="parents_control_timer_title">Time list</string>
    <string name="parents_control_device_title">Device list</string>
    <string name="parents_control_duration_title">Duration</string>
    <string name="parents_control_duration_total">Total time</string>
    <string name="parents_control_consumed_time">Consumed time</string>
    <string name="parents_control_info_title">Information</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hint_input">Please enter the content</string>
    <string name="parents_control_add_timer">Add a new timer</string>
    <string name="parents_control_add_device">Add a new device</string>
    <string name="parents_control_timer_setting">Timer setting</string>
    <string name="start_time">Start time</string>
    <string name="ending_time">Ending time</string>
    <string name="repeat">Repeat</string>
    <string name="one">one</string>
    <string name="two"> two</string>
    <string name="three"> three</string>
    <string name="four"> four</string>
    <string name="five"> five</string>
    <string name="six"> six</string>
    <string name="seven"> seven</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="func_1">PISProcSet</string>
    <string name="func_2">PISConnect</string>
    <string name="func_3">PISConnStatus </string>
    <string name="func_4">PISDiscover </string>
    <string name="func_5">Traverse PISMap</string>
    <string name="func_6">PISSubscribe</string>
    <string name="func_7">PISRequest </string>
    <string name="func_8">DisConnect </string>
    <string name="func_9">NIF_GetCount </string>
    <string name="switch_state_lebal">switch state</string>
    <string name="switch_lightbg_state_lebal">BgLight state</string>
    <string name="position">Location</string>
    <string name="scan_text">The two-dimensional code into the box,\n you can automatically scan</string>
    <string name="scan_processing_text">Adding a new device</string>
    <string name="scan_dialog_title">Notification</string>
    <string name="please_login">Please login</string>
    <string name="no_internet">Now is not connected to the Internet, connect Internet!</string>
    <string name="please_use_wifi">You do not have to use WIFI connection Internet, we recommend that you use WIFI to reduce traffic!</string>
    <string name="add_device_failed">Add new device failed</string>
    <string name="add_device_successed">Add new device successed</string>
    <string name="add_device_network_disconnected">Network disconnect, Add device failed</string>
    <string name="location_title"> Set Location </string>
    <string name="saving"> Saving settings </string>
    <string name="no_link"> Wireless Connection </string>
    <string name="dia_net"> dial </string>
    <string name="has_link"> wired </string>
    <string name="change_ip"> dynamic IP assignment </string>
    <string name="static_ip"> Static IP </string>
    <string name="set_device_name"> Sets the device name </string>
    <string name="hide_device_name"> Name </string>
    <string name="input_alert"> Enter </string>
    <string name="ok"> OK </string>
    <string name="cancel"> Cancel </string>
    <string name="updating"> being updated</string>
    <string name="kai_guan"> Switch </string>
    <string name="refresh_alert">Refreshing</string>
    <string name="lu_you_detail"> Route details </string>
    <string name="wait">Please wait</string>
    <string name="shou_quan_left"> You have successfully licensed to the account [</string>
    <string name="shou_quan_right">] </string>
    <string name="yao_qing_fail">Authorization failed</string>
    <string name="loading"> Loading</string>
    <string name="room_name"> Room Name </string>
    <string name="location_bian_hao"> position number </string>
    <string name="floor"> floor </string>
    <string name="update_succe"> Modify success </string>
    <string name="update_password_fail"> Change Password failed </string>
    <string name="no_switch_password"> Wrong Password!!! </string>
    <string name="alert_password_no_null"> Key in Password!!! </string>
    <string name="alert_password_no_too_long"> password is too long, please enter less than 16 byte characters </string>
    <string name="alert_cancel_shou_quan"> to confirm the cancellation of the authorization? </string>
    <string name="cancel_shou_quan"> to cancel the authorization </string>
    <string name="canceling_shou_quan"> is deauthorize</string>
    <string name="del_device_alert"> sure you want to delete? </string>
    <string name="del_device"> Delete device </string>
    <string name="choose_install_device"> Please select the Add to install equipment </string>
    <string name="min_lebal"> min </string>
    <string name="tip"> Tip </string>
    <string name="add_lebal"> add </string>
    <string name="ju_yu_net_set"> LAN Settings </string>
    <string name="ppp_set"> dialing PPPoE settings </string>
    <string name="mac_copy"> MAC address cloning </string>
    <string name="input_mac"> Please enter the MAC address </string>
    <string name="ju_yu_net_address"> LAN address </string>
    <string name="ip_address"> IP address </string>
    <string name="yan_ma"> Subnet Mask </string>
    <string name="dns_set"> DNS Settings </string>
    <string name="zhu_dns"> master DNS </string>
    <string name="backup_dns"> Alternate DNS </string>
    <string name="dhcp_set"> DHCP settings </string>
    <string name="start_address"> start address </string>
    <string name="end_address"> End address </string>
    <string name="xu_zhu_during"> renew long </string>
    <string name="chong_fu"> repeat </string>
    <string name="day"> Day </string>
    <string name="wang_guan_ip"> Gateway IP </string>
    <string name="yu_ming"> domain name (DNS) IP </string>
    <string name="yu_ming_backup"> domain alternate IP </string>
    <string name="parent_control_start_time">Start time:18:30</string>
    <string name="parent_control_end_time">End time:18:30</string>
</resources>