<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    style="@style/MainViewPadding">

    <TextView 
        android:id="@+id/menu_add_device"
        style="@style/MenuItemTextStyle"
        android:text="@string/menu_add_new_device"
        android:drawableLeft="@drawable/menu_add_device"
        android:clickable="true"
        />
  <TextView 
        android:id="@+id/menu_order_by_position"
        style="@style/MenuItemTextStyle"
        android:text="@string/menu_order_by_position"
        android:clickable="true"
        />
   <TextView 
        android:id="@+id/menu_order_by_name"
        style="@style/MenuItemTextStyle"
        android:text="@string/menu_order_by_name"
        android:clickable="true"
        />
    <TextView 
        android:id="@+id/menu_order_by_device"
        style="@style/MenuItemTextStyle"
        android:text="@string/menu_order_by_device"
        android:layout_marginBottom="@dimen/title_margin_top"
        android:clickable="true"
        />

</LinearLayout>